# rhai-test

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docs.yaml  knope.toml  rhai-test.config.json
.changeset/: .md  add_readme_documentation_and_add_back_in_other_platform_targets.md  add_support_for_int_and_types_for_expectors.md  add_to_exist_expector_function.md  added_support_for_uri_type_to_be_passed_to_expect_function.md  added_watch_flag_to_run_tester_in_file_watch_mode.md  bug_cli_was_returning_a_0_exit_code_on_test_failures.md  bug_test_suies_were_not_being_counted_if_they_had_a_syntax_error.md  fix_install_script_issue_on_linux.md  fix_install_script_issue_on_linux_add_support_for_linux_musl.md  fix_release_to_include_all_artifacts.md  fixing_release_steps.md  initial_experimental_build.md  just_ignore_me_for_now.md  modify_get_subgraph_service_request_to_require_a_supergraph_request_so_that_headers_can_be_set_on_those_kinds_of_tests.md  sign_binary_so_it_can_be_easily_run_on_apple_machines.md  small_changes.md  take_out_version_number_from_artifact_generation.md  test.md  tests_can_now_contain_more_than_one_expect_statement.md  updating_changelog_section_config.md  version_number_parse_was_too_late.md
.github/: CODEOWNERS
.github/workflows/: apple2.yml  build.yml  musl.yaml  pr.yaml  release.yml  test_update_version.yml
examples/: apollo.test.rhai  basic-syntax.test.rhai  client_id.rhai  client_id.test.rhai  client_id.test.rhaii  demo.test.rhai  demo_tests.txt  execution-mocks.test.rhai  execution_propagation.rhai  execution_propagation.test.rhai  global-vars.test.rhai  headers.rhai  headers.test.rhai  http-v1-compat.test.rhai  logging-all-levels.test.rhai  parking-lot-mutex.test.rhai  rhai-engine-functions.test.rhai  rhai-test.config.json  router-mocks.test.rhai  router_tracing.rhai  router_tracing.test.rhai  second-file.test.rhai  second-file.test.rhaii  subgraph_request_id_correlation.rhai  subgraph_request_id_correlation.test.rhai  subgraph_response_enrichment.rhai  subgraph_response_enrichment.test.rhai  supergraph-response.test.rhai  switch_subgraph.rhai  switch_subgraph.test.rhai
installers/nix/: install.sh
src/: engine.rs  expector.rs  main.rs  test_container.rs  test_runner.rs
src/coverage_reporting/: file_coverage_module_resolver.rs  instrumentation.rs  mod.rs  test_coverage_container.rs
src/engine/: engine.rs  error_handling.rs  expector.rs  logging_container.rs  mod.rs  test_container.rs  test_runner.rs
src/extensions/: apollo.rs  file_coverage.rs  helpers.rs  mod.rs
