[package]
name = "rhai-test"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
#apollo-router = { path = "/Users/andrew/source/repos/router/apollo-router" }
apollo-router = { git = "https://github.com/andrewmcgivery/router.git", branch = "feature/rhaitest" }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
http = "0.2"
notify = "6.1.1"
regex = "1.10.6"
rhai = { version = "1.17.1", features = ["metadata"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = { version = "0.16.0", features = ["ansi"]}
