[package]
name = "rhai-test"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
#apollo-router = { path = "/Users/andrew/source/repos/router/apollo-router" }
apollo-router = { git = "https://github.com/andrewmcgivery/router.git", branch = "feature/rhaitest" }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
http = "0.2"
notify = "6.1.1"
regex = "1.10.6"
rhai = { version = "1.23.6", features = ["metadata"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = { version = "0.16.0", features = ["ansi"]}

# Patch yanked deno-proc-macro-rules crates (transitive deps via apollo-router -> router-bridge -> deno_core)
[patch.crates-io]
deno-proc-macro-rules = { git = "https://github.com/denoland/deno-proc-macro-rules", rev = "ffcfe45ca1563f89c821eebfbf1dfec14e0a10d8" }
deno-proc-macro-rules-macros = { git = "https://github.com/denoland/deno-proc-macro-rules", rev = "ffcfe45ca1563f89c821eebfbf1dfec14e0a10d8" }
