[package]
name = "rhai-test"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
#apollo-router = { path = "/Users/andrew/source/repos/router/apollo-router" }
apollo-router = { git = "https://github.com/apollosolutions/router.git", rev = "3e1132a996014abbe2c040185a130dc9cce0b948" }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
http = "1"
notify = "6.1.1"
parking_lot = "0.12"
regex = "1.10.6"
rhai = { version = "1.23.6", features = ["metadata"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = { version = "0.16.0", features = ["ansi"]}
